# SearchEngine

./: .gitignore  CMakeLists.txt  README.md
config/: config.json
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
tests/: CMakeLists.txt  ConverterJSONTests.cpp  InvertedIndexFunctionalityTests.cpp  SearchServerTests.cpp
